--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
+apply plugin: "kotlin-kapt"
 apply plugin: "kotlin-android-extensions"
 apply from: "$rootDir/ktlint.gradle"
 
@@ -46,11 +47,14 @@ dependencies {
     implementation "androidx.core:core-ktx:1.3.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-    implementation "androidx.fragment:fragment-ktx:1.2.4"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation "androidx.room:room-runtime:2.2.5"
     implementation "com.squareup.okhttp3:okhttp:4.6.0"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.11.0"
     implementation "com.google.android.material:material:1.1.0"
+
+    kapt "androidx.room:room-compiler:2.2.5"
 
     testImplementation "junit:junit:4.13"
     testImplementation "io.mockk:mockk:1.10.0"
